fixed church icon and horizontal scroll bar on other devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,7 +109,6 @@ main {
 }
 
 .hero-full {
-    width: 100vw;
     height: 100vh;
     background-size: cover;
     background-position: center;
